# daraja-payment-wrapper

./: .env.example  .gitignore  README.md  dump.rdb  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py  observability.py
app/daraja/: auth.py  client.py  query.py  stk.py
app/middleware/: api_key.py  ip_allowlist.py  rate_limit.py  security_headers.py
app/models/: audit.py  payment.py
app/repository/: payment_repo.py
app/routes/: health.py  stk.py
app/schemas/: c2b.py  stk.py
app/services/: stk.py
app/tasks/: _infra.py  _worker_utils.py  celery.py  celery_app.py  reconciliation_tasks.py  stk_tasks.py
migrations/: env.py
migrations/versions/: d3de5502634c_initial_tables.py
